[package]
name = "test-captain2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
capnp = "0.17.2"
capnp-rpc = "0.17.0"
capnpc = "0.17.2"
futures = "0.3.28"
tokio = { version = "1.29.1", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["compat"] }


[build-dependencies]
capnpc = "0.17.2"
