[package]
name = "test-captain3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bincode = "1.3.3"
bson = { version = "2.6.1", features = ["serde_with"] }
capnp = "0.17.2"
capnp-rpc = "0.17.0"
chrono = "0.4.26"
clap = "4.3.11"
dotenv = "0.15.0"
ethereum-types = "0.14.1"
futures = "0.3.28"
futures-util = "0.3.28"
hex = "0.4.3"
llm = "0.1.1"
mongodb = "2.6.1"
qdrant-client = "1.3.0"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["json"] }
rocksdb = "0.21.0"
rustyline = "12.0.0"
serde = { version = "1.0.171", features = ["serde_derive", "derive"] }
serde_json = "1.0.102"
sha2 = "0.10.7"
tokio = { version = "1.29.1", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["compat"] }



[build-dependencies]
capnpc = "0.17.2"

