[package]
name = "test-captain4"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
capnp = "0.19.6"
capnpc = "0.19.0"
chrono = "0.4.38"
hex = "0.4.3"
prost = "0.12.6"

rmp-serde = "1.3.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"


[build-dependencies]
capnpc = "0.19.0"
prost-build = "0.12.6"
