[package]
name = "capnp-test"
version = "0.1.0"
edition = "2021"

[[example]]
name = "car"
path = "examples/car.rs"

[dependencies]
capnp = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
chrono = "0.4"
rand = "0.9.0"
crossbeam-channel = "0.5"
hex = "0.4.3"
sha2 = "0.10"

[build-dependencies]
capnpc = "0.18"
