[package]
name = "test-chatbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO Investigate which of these dependencies can go behind features.
bytes = "1"
futures = "0.3"
http = "0.2"
pin-project = "1"
reqwest = { version = "0.11.22", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.20.1", features = ["rustls-tls-webpki-roots"] }
tokio-util = { version = "0.7.1", features = ["codec", "io"] }
tungstenite = "0.20.1"
url = "2"
uuid = { version = "1", features = ["serde"] }
# Dependencies below are specified only to satisfy minimal-versions.
proc-macro2 = "1.0.60"
deepgram = "0.4.0"



#[dev-dependencies]
pkg-config = "0.3.27"
cpal = "0.13"
crossbeam = "0.8"
