[package]
name = "test-dioxus-fetch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus= { version = "0.2.4", features = ["desktop","fermi"] }
dioxus-router = {version="0.2.3"}
dioxus-html="0.2.1"
dioxus-core="0.2.1"
dioxus-core-macro="0.2.1"
hex="0.4.3"
bson="2.0.1"
bincode = "1.3.3"
serde={version="1.0.137", features=["derive"]}
serde_json="1.0.81"                                                                               
prost = "0.10.3"                                                                                       
tonic = {version="0.7.2",features = ["tls"]}                                                          
futures = "0.3.19" 
sled = "0.34.7"                                                                                      
read_input = "0.8.4"
structopt="0.3.22"
chrono = "0.4.19"
mongodb = "2.0.1"
tokio={version="1.12.0", features=["full"]}
sha2 = "0.10.0"
blake2 = "0.10.0"
anyhow="1.0.52"
futures-channel = "0.3.19"
rusqlite="0.27.0"
rand="0.8.5"