[package]
name = "test-ecc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bip32 = "0.5.1"
ecies = "0.2.6"
ethers = "2.0.11"
hex = "0.4.3"
hmac = "0.12.1"
k256 = "0.13.3"
rand = "0.8.5"
rand_core = "0.6.4"
rust-crypto = "0.2.36"
sha2 = "0.10.8"
tiny-bip39 = "1.0.0"
tokio = { version = "1.35.1", features = ["full"] }
