[package]
name = "test-ecc2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.2"
anyhow = "1.0.82"
hkdf = "0.12.3"
k256 = "0.11.6"
rand = "0.8.5"
sha2 = "0.10.6"


[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.14", features = ["js"] }
