[package]
name = "test-flexbuffer"
version = "0.1.0"
edition = "2024"

[dependencies]
fake = { version = "2.6.1", features = ["derive"] }
flexbuffers = { version = "25.2.10", features = ["serialize_human_readable", "deserialize_human_readable"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
