[package]
name = "test-gluesql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
base64 = "0.22.1"
chrono = "0.4"
fake = "2.9.2"
gluesql = { version = "0.16.0", features = ["gluesql-csv-storage", "gluesql_sled_storage"] }
gluesql-csv-storage = "0.16.0"
hex = "0.4.3"
tokio = { version = "1.37.0", features = ["full"] }
