[package]
name = "test-h3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.73"
bincode = "1.3.3"
bson = { version = "2.6.1", features = ["serde_with"] }
capnp = "0.17.2"
capnp-rpc = "0.17.0"
chrono = "0.4.26"
clap = "4.3.11"
dotenv = "0.15.0"
ethereum-types = "0.14.1"
futures = "0.3.28"
futures-util = "0.3.28"
hex = "0.4.3"
mongodb = "2.6.1"
qdrant-client = "1.7.0"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["json"] }
rocksdb = "0.21.0"
rustyline = "12.0.0"
serde = { version = "1.0.171", features = ["serde_derive", "derive"] }
serde_json = "1.0.102"
sha2 = "0.10.7"
tokio = { version = "1.29.1", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["compat"] }
actix-files = { version = "0.6"}
actix-web = { version = "4",  features = ["macros"] }
console_log = "1"
console_error_panic_hook = "0.1"
cfg-if = "1"
actix-rt = "2.9.0"
actix-cors = "0.6.4"
regex = "1.10.2"
fake = { version = "2.9.2", features = ["derive", "dummy", "serde_json"] }
text_io = "0.1.12"
h3 = "0.0.3"
h3-quinn = "0.0.4"
h3-webtransport = "0.1.0"
structopt = "0.3.26"
tracing = "0.1.40"
http = "0.2"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "ansi",
    "env-filter",
    "time",
    "tracing-log",
] }
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-native-certs = "0.6"
bytes = "1.5.0"
quinn = { version = "0.10", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "ring",
] }



[build-dependencies]
capnpc = "0.17.2"

