[package]
name = "test-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive", "env", "debug"] }
fake = "2.9.2"
reqwest = "0.11.23"
serde = { version = "1.0.196", features = ["derive", "rc", "serde_derive"] }
serde_json = "1.0.113"
tokio = { version = "1.35.1", features = ["full"] }
