[package]
name = "test-http3chrome"
version = "0.1.0"
edition = "2024"

[dependencies]
capnp = "0.19"
hex = "0.4"
futures = "0.3.28"
futures-util = "0.3.28"
h3 = "0.0.7"
h3-quinn = "0.0.9"
h3-webtransport = "0.1.0"
structopt = "0.3.26"
http = "1.1"
anyhow = { version = "1.0.77", features = ["std", "backtrace"] }
quinn = { version = "0.11", default-features = false, features = [
    "runtime-tokio",
    "rustls",
    "ring",
] }
async-io = { version = "2.3", optional = true }
async-std = { version = "1.11", optional = true }
bytes = "1"
# Enables futures::io::{AsyncRead, AsyncWrite} support for streams
futures-io = { version = "0.3.19", optional = true }
rustc-hash = "2.0"
pin-project-lite = "0.2"
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "std",
] }
thiserror = "1.0.21"
tracing = "0.1.10"
tokio = { version = "1.28.1", features = ["full"] }
webpki = { version = "0.22", default-features = false, optional = true }
clap = { version = "4.3", features = ["derive"] }
arboard = "3.4.0"
rustls-native-certs = "0.7"
crc = "3"
bencher = "0.1.5"
directories-next = "2"
rand = "0.8"
rcgen = "0.13"
rustls-pemfile = "2.1"
tracing-subscriber = { version = "0.3.0", default-features = false, features = [
    "env-filter",
    "fmt",
    "ansi",
    "time",
    "local-time",
] }
tracing-futures = { version = "0.2.0", default-features = false, features = [
    "std-future",
] }
url = "2"
async-trait = "0.1.74"
genpdf = { version = "0.2.0", features = ["images"] }
prettytable = "0.10.0"
chrono = "0.4.33"
uuid = { version = "1.9", features = ["v8", "v7", "v4"] }
serde = { version = "1.0", features = ["derive", "serde_derive"] }
bincode = "1.3.3"
serde_json = "1.0"
rusqlite = "0.32.1"
ethers = { git = "https://github.com/leejw51/ethers-rs.git", branch = "master" }
rpassword = "7.3.1"
sha2 = "0.10"
secp256k1 = "0.29.0"
unicode-segmentation = "1.11"
mongodb = "3.0.0"
fake = { version = "2.9.2", features = ["derive"] }
actix-web = "4.8"
actix-cors = "0.7.0"
gluesql = { version="0.16.0", features = ["gluesql-web-storage"] }
rustyline = "14.0.0"
rusttype = "0.9.3"
text_io = "0.1.12"
reqwest = { version = "0.12.8", features = ["json"] }
single-instance = "0.3"
hyper = { version = "1.2", features = ["full", "http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1"] }
tokio-rustls = "0.25"
