[package]
name = "test-iavl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.34.7"
tokio = "1.21.2"
bytes = {version="1.2.1", features=["serde"]}
serde = {version= "1.0.147", features = ["derive"]}
bincode = "1.3.3"
hex ="0.4.3"
rand= "0.8.5"
sha2="0.10.6"
anyhow="1.0.66"
text_trees = "0.1.2"