[package]
name = "test-leptos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
capnp = "0.18.0"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
env_logger = "0.10.0"
leptos = { version = "0.4.10", features = ["csr", "nightly"] }
log = "0.4.20"
