[package]
name = "lua-ecdsa-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
mlua = { version = "0.10", features = ["lua54", "vendored"] }
bip39 = "2.0"
bip32 = "0.5"
secp256k1 = { version = "0.29", features = ["rand-std"] }
hex = "0.4"
sha2 = "0.10"
sha3 = "0.10"
ripemd = "0.1"
rand = "0.8"
hmac = "0.12"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rpassword = "7.3"
ethers = { version = "2.0", features = ["legacy"] }
ethers-core = "2.0"
ethers-providers = "2.0"
ethers-contract = "2.0"
ethers-signers = "2.0"
viuer = "0.7"
