[package]
name = "test-messagepack"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
fake = { version = "2.9.2", features = ["derive"] }
hex = { version = "0.4.3", features = ["serde"] }
rmp-serde = "1.3.0"
serde = { version = "1.0.203", features = ["derive", "rc", "serde_derive"] }
serde_json = "1.0.117"
