[package]
name = "test-pdf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
genpdf = { version = "0.2.0", features = ["image", "images", "hyphenation"] }
regex = "1.10.2"
unic-segment = "0.9.0"
walkdir = "2.4.0"
