[package]
name = "test-zkevm"
version = "0.1.0"
edition = "2021"

[dependencies]
zksync-web3-rs = "0.1.1"
ethers = { version = "2.0.4", features = ["rustls"] }
ethers-contract = "2.0.7"
clap = { version = "4.2.7", features = ["derive"] }
lazy_static = "1.4.0"
anyhow = "1.0.82"
bip39 = "2.0.0"
colored = "2.1.0"
rand = "0.8.5"
rpassword = "7.3.1"
chrono = "0.4.38"
hex = "0.4.3"
serde = { version = "1.0.208", features = ["derive", "rc", "serde_derive"] }
serde_json = "1.0.125"
generic-array = "1.1.0"
prettytable = "0.10.0"
tokio = { version = "1.39.3", features = ["full"] }
