[package]
name = "test_capnproto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
capnp = "0.18"
hex= "0.4.3"
anyhow = { version = "1.0.77", features = ["std", "backtrace"] }
chrono = "0.4.31"
rand = "0.8.5"

[build-dependencies]
capnpc = "0.18"
