[package]
name = "rusttss"
version = "0.1.0"
edition = "2021"

[dependencies]
web3 = "0.19.0"
secp256k1 = { version = "0.27.0", features = ["rand-std"] }
rand = "0.8.5"
sha2 = "0.10.8"
hex = "0.4.3"
hmac = "0.12.1"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35.1", features = ["full"] }
rlp = "0.5.2"
ethereum-types = "0.14.1"
ethers = { version = "2.0.11", features = ["legacy"] }
num-bigint = { version = "0.4", features = ["rand", "serde"] }
num-traits = "0.2"
lazy_static = "1.4.0"
color-eyre = "0.6"
eyre = "0.6"
anyhow = "1.0"

[lib]
name = "rusttss"
path = "src/lib.rs"

[[example]]
name = "tss"
path = "examples/tss.rs"

[[example]]
name = "sendtx"
path = "examples/sendtx.rs"

